Ft: Traslate, steps and and style button

--- a/lang/es.json
+++ b/lang/es.json
@@ -129,5 +129,30 @@
     "Clear": "Limpiar",
     "Reset": "Restablecer",
     "Print": "Imprimir",
-    "Copy": "Copiar"
+    "Copy": "Copiar",
+    "The :attribute field is required.": "El campo :attribute es obligatorio.",
+    "The :attribute field must be a valid email address.": "El campo :attribute debe ser una dirección de correo válida.",
+    "The :attribute field must be at least :min characters.": "El campo :attribute debe tener al menos :min caracteres.",
+    "The :attribute field must not be greater than :max characters.": "El campo :attribute no debe tener más de :max caracteres.",
+    "The :attribute field must be a number.": "El campo :attribute debe ser un número.",
+    "The :attribute field must be a valid date.": "El campo :attribute debe ser una fecha válida.",
+    "The :attribute field must be accepted.": "El campo :attribute debe ser aceptado.",
+    "The :attribute field must be between :min and :max characters.": "El campo :attribute debe tener entre :min y :max caracteres.",
+    "The :attribute field must be exactly :size characters.": "El campo :attribute debe tener exactamente :size caracteres.",
+    "The :attribute field must be a valid phone number.": "El campo :attribute debe ser un número de teléfono válido.",
+    "validation.required": "Este campo es obligatorio.",
+    "validation.email": "Debe ser una dirección de correo válida.",
+    "validation.min.string": "Debe tener al menos :min caracteres.",
+    "validation.max.string": "No debe tener más de :max caracteres.",
+    "validation.numeric": "Debe ser un número.",
+    "validation.date": "Debe ser una fecha válida.",
+    "validation.accepted": "Debe ser aceptado.",
+    "validation.between.string": "Debe tener entre :min y :max caracteres.",
+    "validation.size.string": "Debe tener exactamente :size caracteres.",
+    "Please fill in all required fields before continuing.": "Por favor complete todos los campos obligatorios antes de continuar.",
+    "There are validation errors. Please check the form.": "Hay errores de validación. Por favor revise el formulario.",
+    "This field is required": "Este campo es obligatorio",
+    "Invalid email address": "Dirección de correo inválida",
+    "Must be at least :min characters": "Debe tener al menos :min caracteres",
+    "Must not exceed :max characters": "No debe exceder :max caracteres"
 }
