Quit test funciton

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,10 +1,16 @@
 {
     "Sign in": "Iniciar sesión",
+    "Log in to your account": "Entre a su cuenta",
+    "Email": "Correo electrónico",
     "Email address": "Correo electrónico", 
     "Password": "Contraseña",
     "Remember me": "Recordarme",
-    "Login": "Iniciar sesión",
+    "Remember": "Recordarme",
+    "Login": "Entrar",
     "Authenticate": "Iniciar sesión",
+    "Forgot your password?": "¿Olvidó su contraseña?",
+    "Reset password": "Restablecer contraseña",
+    "Send password reset email": "Enviar correo de restablecimiento",
     "Dashboard": "Tablero",
     "Logout": "Cerrar sesión",
     "Profile": "Perfil",
@@ -130,6 +136,27 @@
     "Reset": "Restablecer",
     "Print": "Imprimir",
     "Copy": "Copiar",
+    "New Agreement": "Nuevo Convenio",
+    "Create Agreement": "Crear Convenio",
+    "Agreement Wizard": "Asistente de Convenio",
+    "Wizard": "Asistente",
+    "Step": "Paso",
+    "Agreement": "Convenio",
+    "Client": "Cliente",
+    "Property": "Propiedad",
+    "Financial Calculator": "Calculadora Financiera",
+    "Summary": "Resumen",
+    "Document Management": "Gestión de Documentos",
+    "Generated Documents": "Documentos Generados",
+    "Client Documents": "Documentos del Cliente",
+    "Successful Closure": "Cierre Exitoso",
+    "Send Documents to Client": "Enviar Documentos al Cliente",
+    "Mark Documents as Received": "Marcar Documentos como Recibidos",
+    "Download All Documents": "Descargar Todos los Documentos",
+    "Generate Final Report": "Generar Reporte Final",
+    "View PDF": "Ver PDF",
+    "Download PDF": "Descargar PDF",
+    "Enter": "Entrar",
     "The :attribute field is required.": "El campo :attribute es obligatorio.",
     "The :attribute field must be a valid email address.": "El campo :attribute debe ser una dirección de correo válida.",
     "The :attribute field must be at least :min characters.": "El campo :attribute debe tener al menos :min caracteres.",
@@ -154,5 +181,20 @@
     "This field is required": "Este campo es obligatorio",
     "Invalid email address": "Dirección de correo inválida",
     "Must be at least :min characters": "Debe tener al menos :min caracteres",
-    "Must not exceed :max characters": "No debe exceder :max caracteres"
+    "Must not exceed :max characters": "No debe exceder :max caracteres",
+    "Agreement in Process": "Convenio en Proceso",
+    "Agreement Signed": "Convenio Firmado",
+    "Pending Validation": "Pendiente de Validación",
+    "Generating Documents": "Generando Documentos",
+    "Documents Generated": "Documentos Generados",
+    "Documents Sent": "Documentos Enviados",
+    "Awaiting Client Documents": "Esperando Documentos del Cliente",
+    "Documents Complete": "Documentos Completos",
+    "Error Generating Documents": "Error al Generar Documentos",
+    "Enter your email and password below to log in": "Ingrese su correo electrónico y contraseña para iniciar sesión",
+    "Log in": "Entrar",
+    "Don't have an account?": "¿No tienes una cuenta?",
+    "Sign up": "Registrarse",
+    "auth.failed": "Estas credenciales no coinciden con nuestros registros.",
+    "auth.throttle": "Demasiados intentos de acceso. Por favor intente nuevamente en :seconds segundos."
 }
