Calculadora cotizacion inicial

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,6 @@
 {
     "Sign in": "Iniciar sesión",
-    "Log in to your account": "Entre a su cuenta",
+    "Log in to your account": "Entra a tu cuenta",
     "Email": "Correo electrónico",
     "Email address": "Correo electrónico", 
     "Password": "Contraseña",
@@ -8,7 +8,7 @@
     "Remember": "Recordarme",
     "Login": "Entrar",
     "Authenticate": "Iniciar sesión",
-    "Forgot your password?": "¿Olvidó su contraseña?",
+    "Forgot your password?": "¿Olvidaste tu contraseña?",
     "Reset password": "Restablecer contraseña",
     "Send password reset email": "Enviar correo de restablecimiento",
     "Dashboard": "Tablero",
@@ -191,7 +191,7 @@
     "Awaiting Client Documents": "Esperando Documentos del Cliente",
     "Documents Complete": "Documentos Completos",
     "Error Generating Documents": "Error al Generar Documentos",
-    "Enter your email and password below to log in": "Ingrese su correo electrónico y contraseña para iniciar sesión",
+    "Enter your email and password below to log in": "Ingresa tu correo electrónico y contraseña para iniciar sesión",
     "Log in": "Entrar",
     "Don't have an account?": "¿No tienes una cuenta?",
     "Sign up": "Registrarse",
